# canopy

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  TESTING.md  USAGE.md  canopy-spec-v1.md  debug.html  package-lock.json  test-functions.js  test-viz-simple.html  test-viz.html  test-websocket.html  test_incremental.rs  test_watch.rs
client/: graph.js  grid-view.js  index.html  protocol.js
crates/canopy-ai/: Cargo.toml  README.md
crates/canopy-ai/src/: bridge.rs  budget.rs  cache.rs  lib.rs  prompt.rs  tests.rs
crates/canopy-ai/src/providers/: anthropic.rs  local.rs  mod.rs  openai.rs
crates/canopy-core/: Cargo.toml  README.md
crates/canopy-core/src/: aggregation.rs  cache.rs  diff.rs  graph.rs  lib.rs  model.rs  symbols.rs  test_utils.rs  tests.rs  workspace.rs
crates/canopy-indexer/: Cargo.toml  README.md
crates/canopy-indexer/src/: coordinator.rs  extractor.rs  lib.rs  parser_pool.rs  tests.rs  tree_cache.rs
crates/canopy-indexer/src/config/: dockerfile.rs  dotenv.rs  github_actions.rs  json.rs  mod.rs  sql_migration.rs  toml_parser.rs  yaml.rs
crates/canopy-indexer/src/heuristics/: config_keys.rs  docker.rs  env_vars.rs  mod.rs  routes.rs
crates/canopy-indexer/src/languages/: c.rs  cpp.rs  generic.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs  typescript.rs
crates/canopy-server/: Cargo.toml  README.md
crates/canopy-server/src/: assets.rs  handlers.rs  lib.rs  router.rs  websocket.rs
crates/canopy-watcher/: Cargo.toml  README.md
crates/canopy-watcher/src/: lib.rs  watcher.rs
examples/sample-rust-project/: Cargo.toml  demo.sh
examples/sample-rust-project/src/: lib.rs  main.rs
src/: commands.rs  main.rs
tests/integration/: main.rs
