[package]
name = "canopy-indexer"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tree-sitter = { workspace = true }
tree-sitter-rust = { workspace = true }
tree-sitter-typescript = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
canopy-core = { path = "../canopy-core" }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ignore = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
