[package]
name = "canopy-watcher"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
notify = { workspace = true }
ignore = { workspace = true }
canopy-core = { path = "../canopy-core" }
canopy-indexer = { path = "../canopy-indexer" }
canopy-ai = { path = "../canopy-ai" }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tree-sitter = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = { workspace = true }
